--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ wp-content/uploads/
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 
+composer.lock
+
 /readme.html
 /license.txt
 /vendor
+/includes/libs/composer
+/includes/libs/autoload.php
